Add note about the currently fictional "MHCLG Forum"

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -105,6 +105,9 @@ we use to help us do this thing?
 
 ## The MHCLG Way Forum
 
+**NOTE: The MHCLG Forum does not exist yet, but we'd like to agree formation of something like this in the Technology
+Community of Practice. What follows is an aspiration for the Forum-to-be**
+
 This site documents some of the decisions agreed at the MHCLG Way Forum about the products we operate.
 
 The MHCLG Forum meets once a month. The Forum is lead developers and technical architects representing MHCLG programmes who are responsible for communicating and implementing the MHCLG Way.
