--- a/source/standards/naming-software-products.html.md.erb
+++ b/source/standards/naming-software-products.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: How to name software products
-last_reviewed_on: 2024-06-24
+last_reviewed_on: 2024-08-30
 review_in: 6 months
 ---
 
@@ -10,7 +10,7 @@ Read this guide when you need to name components for your software product, for 
 
 ## Your product name should be self-descriptive
 
-Avoid using puns or branding for names as this makes it difficult for others to understand what it does.
+Avoid using puns, acronyms or branding for names as this makes it difficult for others to understand what it does.
 
 Make sure you use the same name consistently whenever you're referring to the same product. For example the name of the Delta application’s GitHub repository is [communitiesuk/delta](https://github.com/communitiesuk/delta).
 
