--- a/source/manuals/programming-languages.html.md.erb
+++ b/source/manuals/programming-languages.html.md.erb
@@ -14,7 +14,7 @@ review_in: 12 months
             <li><a href="/manuals/programming-languages/html.html">HTML</a></li>
             <li><a href="/manuals/programming-languages/java.html">Java</a></li>
             <li><a href="/manuals/programming-languages/js.html">JavaScript</a></li>
-            <li><a href="/manuals/programming-languages/nodejs/index.html">Node.js</a></li>
+            <li><a href="/manuals/programming-languages/typescript.html">TypeScript</a></li>
             <li><a href="/manuals/programming-languages/python/python.html">Python</a></li>
             <li><a href="/manuals/programming-languages/ruby.html">Ruby</a></li>
         </ul>
@@ -64,9 +64,9 @@ We've got a consistent style for:
 - [HTML](programming-languages/html.html)
 - [Java](programming-languages/java.html)
 - [JavaScript](programming-languages/js.html)
-- [Node.js](programming-languages/nodejs/)
 - [Python](programming-languages/python/python.html)
 - [Ruby](programming-languages/ruby.html) (tested with [RSpec](../standards/testing-with-rspec.html))
+- [TypeScript](programming-languages/typescript.html)
 
 Some of the guidelines in the style guides are codified in a
 [.editorconfig](programming-languages/editorconfig) file. Place a copy of this
