Delete Java style guide and move Python out of subfolder
We don't recommend using Java, so don't need a style guide for it.

Also no reason for the python guidance to live in a subfolder, so have moved that up to the same level as all other style guides.

--- a/source/manuals/programming-languages/python.html.md.erb
+++ b/source/manuals/programming-languages/python.html.md.erb
@@ -7,6 +7,8 @@ owner_slack: '#mhclg-way'
 
 # <%= current_page.data.title %>
 
+**TODO: Review by MHCLG Python developers**
+
 This manual is designed to aid developers in writing Python code that is clear
 and consistent, within, and across, projects at MHCLG.
 
