--- a/source/manuals/programming-languages.html.md.erb
+++ b/source/manuals/programming-languages.html.md.erb
@@ -12,10 +12,10 @@ review_in: 12 months
             <li><a href="/manuals/programming-languages/css.html">CSS/Sass</a></li>
             <li><a href="/manuals/programming-languages/docker.html">Docker</a></li>
             <li><a href="/manuals/programming-languages/html.html">HTML</a></li>
-            <li><a href="/manuals/programming-languages/java.html">Java</a></li>
             <li><a href="/manuals/programming-languages/js.html">JavaScript</a></li>
+            <li><a href="/manuals/programming-languages/kotlin.html">Kotlin</a></li>
             <li><a href="/manuals/programming-languages/typescript.html">TypeScript</a></li>
-            <li><a href="/manuals/programming-languages/python/python.html">Python</a></li>
+            <li><a href="/manuals/programming-languages/python.html">Python</a></li>
             <li><a href="/manuals/programming-languages/ruby.html">Ruby</a></li>
         </ul>
     </li>
@@ -62,9 +62,9 @@ We've got a consistent style for:
 - [CSS/Sass](programming-languages/css.html)
 - [Docker](programming-languages/docker.html)
 - [HTML](programming-languages/html.html)
-- [Java](programming-languages/java.html)
 - [JavaScript](programming-languages/js.html)
-- [Python](programming-languages/python/python.html)
+- [Kotlin](programming-languages/kotlin.html)
+- [Python](programming-languages/python.html)
 - [Ruby](programming-languages/ruby.html) (tested with [RSpec](../standards/testing-with-rspec.html))
 - [TypeScript](programming-languages/typescript.html)
 
