Add TODOs to some style guides
We need input from the community on what these pages should contain, so just flagging this with **TODO** for now.

--- a/source/manuals/programming-languages/css.html.md.erb
+++ b/source/manuals/programming-languages/css.html.md.erb
@@ -17,6 +17,8 @@ owner_slack: '#mhclg-way'
 
 ## Linting
 
+**TODO: Decide if we want to use this CSS linting format for MHCLG and fork if necessary**
+
 Your project should conform to MHCLG CSS/Sass linting rules, these are published as a [stylelint](https://stylelint.io) configuration: [stylint-config-gds](https://github.com/alphagov/stylelint-config-gds).
 
 ## Whitespace
