--- a/source/manuals/programming-languages/docker.html.md.erb
+++ b/source/manuals/programming-languages/docker.html.md.erb
@@ -6,6 +6,8 @@ review_in: 6 months
 
 # <%= current_page.data.title %>
 
+**TODO: Review - do we encourage the use of Dockerfiles at MHCLG and if so, is this guidance appropriate?**
+
 This style guide:
 
 * provides some conventions for creating production-ready Dockerfiles at MHCLG
