--- a/source/manuals/programming-languages/js.html.md.erb
+++ b/source/manuals/programming-languages/js.html.md.erb
@@ -7,6 +7,8 @@ owner_slack: '#mhclg-way'
 
 # <%= current_page.data.title %>
 
+**TODO: Review this page.  Is it all relevant for MHCLG? Do we want to be as prescriptive? Should this and the TypeScript style guides be merged?**
+
 ## Contents
 
 * [Linting](#linting)
