--- a/source/manuals/programming-languages/kotlin.html.md.erb
+++ b/source/manuals/programming-languages/kotlin.html.md.erb
@@ -21,4 +21,8 @@ the main [programming languages manual page](../programming-languages.html).
 
 ## TODO - developers with opinions about Kotlin to add guidance
 
+Are there useful things in the [now-deleted Java style guidance from GDS][gds-java]?
+
+[gds-java]: https://github.com/communitiesuk/mhclg-way/blob/15e8ad168750a6b160f980904797cb045f8ea9e7/source/manuals/programming-languages/java.html.md.erb
+
 ## Further reading or information
