--- a/source/manuals/programming-languages.html.md.erb
+++ b/source/manuals/programming-languages.html.md.erb
@@ -23,7 +23,7 @@ review_in: 12 months
 <% end %>
 
 <div class="page-banner">
-    <p><strong>The MHCLG Way and its content is intended for internal use by the MHCLG and CO CDIO communities.</strong></p>
+    <p><strong>The MHCLG Way and its content is intended for internal use by the MHCLG community.</strong></p>
 </div>
 
 # <%= current_page.data.title %>
