Fix link tag typo (missing hyphen)

--- a/source/manuals/programming-languages/typescript.html.md.erb
+++ b/source/manuals/programming-languages/typescript.html.md.erb
@@ -27,6 +27,6 @@ wrong types are used.
 
 This could be along the lines of [Node.js guidance found in the GDS Way][gdsway-nodejs]
 
-[gdswaynodejs]: https://gds-way.digital.cabinet-office.gov.uk/manuals/programming-languages/nodejs/
+[gdsway-nodejs]: https://gds-way.digital.cabinet-office.gov.uk/manuals/programming-languages/nodejs/
 
 ## Further reading or information
