--- a/source/manuals/programming-languages.html.md.erb
+++ b/source/manuals/programming-languages.html.md.erb
@@ -65,7 +65,7 @@ We've got a consistent style for:
 - [JavaScript](programming-languages/js.html)
 - [Kotlin](programming-languages/kotlin.html)
 - [Python](programming-languages/python.html)
-- [Ruby](programming-languages/ruby.html) (tested with [RSpec](../standards/testing-with-rspec.html))
+- [Ruby](programming-languages/ruby.html)
 - [TypeScript](programming-languages/typescript.html)
 
 Some of the guidelines in the style guides are codified in a
