--- a/source/manuals/licensing.html.md.erb
+++ b/source/manuals/licensing.html.md.erb
@@ -77,13 +77,13 @@ for the documentation.
 
 ### Example
 
-The [MHCLG Way][the-mhclg] repo is a good example of licensing open documentation.
+The [MHCLG Way][mhclg-way] repo is a good example of licensing open documentation.
 
 [mit-license]: https://opensource.org/licenses/MIT
 [uk-fact-sheet]: https://copyrightservice.co.uk/copyright/p03_copyright_notices
 [pay-licence]: https://github.com/alphagov/pay-adminusers/blob/master/LICENCE
 [ogl-licence]: https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/
-[the-mhclg]: https://github.com/alphagov/the-mhclg
+[mhclg-way]: https://github.com/communitiesuk/mhclg-way
 [gh-licence-guidance]: https://docs.github.com/en/communities/setting-up-your-project-for-healthy-contributions/adding-a-license-to-a-repository#including-an-open-source-license-in-your-repository
 [readme]: /manuals/readme-guidance.html
 [guardian-style]: https://www.theguardian.com/guardian-observer-style-guide-l
