--- a/source/standards/monitoring.html.md.erb
+++ b/source/standards/monitoring.html.md.erb
@@ -6,7 +6,7 @@ review_in: 3 months
 
 # <%= current_page.data.title %>
 
-In Cabinet Office Digital and MHCLG, we follow the Service Manual guidance on how to [monitor the status of services][] and set [performance metrics][].
+In MHCLG, we follow the Service Manual guidance on how to [monitor the status of services][] and set [performance metrics][].
 
 We recommend using [Pingdom][] to monitor your service’s availability from outside our network. To further make sure your service is working, you should:
 
