--- a/source/standards/pre-commit-hooks.html.md.erb
+++ b/source/standards/pre-commit-hooks.html.md.erb
@@ -5,12 +5,12 @@ review_in: 3 months
 ---
 # <%= current_page.data.title %>
 
-> The guidance on this page is no longer valid, and is [due to be updated](https://github.com/alphagov/the-mhclg/issues/839).
+> The guidance on this page is no longer valid, and is [due to be updated](https://github.com/alphagov/gds-way/issues/839).
 
 [Git hooks](https://githooks.com/) are scripts that Git executes before or after events such as commit, push, and receive. Pre-commit hooks are useful in detecting secrets automatically before developers commit work locally on their machines.
 
-The Cabinet Office Digital Cyber Security team has recommended a pre-commit git hook called [Detect Secrets](https://github.com/Yelp/detect-secrets) for preventing secrets being commited to git. This is no longer centrally managed but something that teams should customise for their local usage.
+The Cabinet Office Digital Cyber Security team has recommended a pre-commit git hook called [Detect Secrets](https://github.com/Yelp/detect-secrets) for preventing secrets being commited to git.
 
 ## Further guidance
 - [Git hooks](https://githooks.com/)
-- [Cyber Security pre-commit install guidance](https://github.com/alphagov/gds-pre-commit)
+- [Cabinet Office Digital Cyber Security pre-commit install guidance](https://github.com/alphagov/gds-pre-commit)
