Replace "alphagov" with "communitiesuk" GitHub org

--- a/source/standards/source-code/use-github.html.md.erb
+++ b/source/standards/source-code/use-github.html.md.erb
@@ -6,17 +6,17 @@ review_in: 6 months
 
 # <%= current_page.data.title %>
 
-MHCLG uses the [alphagov] organisation on [GitHub] to collaborate on code. The GOV.UK One Login programme uses [govuk-one-login].
+MHCLG uses the [communitiesuk] organisation on [GitHub] to collaborate on code. The GOV.UK One Login programme uses [govuk-one-login].
 
-### Getting access to `alphagov`
+### Getting access to `communitiesuk`
 
-You can use your personal GitHub account to access alphagov if you wish.
+You can use your personal GitHub account to access communitiesuk if you wish.
 
-All github user accounts added to `alphagov` *must* be [connected](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-personal-account-on-github/managing-email-preferences/adding-an-email-address-to-your-github-account) with a valid `digital.cabinet-office.gov.uk` email address. Accounts not connected to a valid email address will be removed from `alphagov`.
+All github user accounts added to `communitiesuk` *must* be [connected](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-personal-account-on-github/managing-email-preferences/adding-an-email-address-to-your-github-account) with a valid `digital.cabinet-office.gov.uk` email address. Accounts not connected to a valid email address will be removed from `communitiesuk`.
 
 You must also set up two-factor authentication on your account.
 
-To join `alphagov` ask your tech lead or technical architect to invite you. Make sure you've connected your MHCLG email address to your account first, otherwise your account will be removed.
+To join `communitiesuk` ask your tech lead or technical architect to invite you. Make sure you've connected your MHCLG email address to your account first, otherwise your account will be removed.
 
 ### Configuring GitHub repositories
 
@@ -33,7 +33,7 @@ Update the application's README to explain why the repository has been archived,
 
 ### Using Github Actions and workflows
 
-Alphagov repositories can be configured to use [GitHub Actions](https://docs.github.com/en/actions) for CI/CD jobs, for example running unit tests or deploying a static site.
+Repositories in `communitiesuk` can be configured to use [GitHub Actions](https://docs.github.com/en/actions) for CI/CD jobs, for example running unit tests or deploying a static site.
 
 Actions and workflows can be powerful, so take care to follow best security practice.
 
@@ -70,7 +70,7 @@ Note that for public repositories, the output of workflow runs is visible to eve
 
 ### Access GitHub support
 
-The alphagov organisation is covered under the Cabinet Office's [GitHub enterprise support agreement][]. Under this agreement GitHub will respond to support requests within eight hours, Monday to Friday.
+The communitiesuk organisation is covered under the Cabinet Office's [GitHub enterprise support agreement][]. Under this agreement GitHub will respond to support requests within eight hours, Monday to Friday.
 
 To access enterprise support you need either to be an enterprise admin or have been granted a support entitlement by an enterprise admin. There can only be a maximum of 20 people across the enterprise who have the support entitlement, so not everyone can have this.
 
@@ -80,7 +80,7 @@ If you are not already an enterprise admin or have a support entitlement on your
 
 Once you've been given permission, you can view and raise support requests using GitHub's [support portal].
 
-You should use your `@digital.cabinet-office.gov.uk` email during the sign up process to ensure your ticket is prioritised. You should also state that you are part of alphagov organisation in your request.
+You should use your `@communities.gov.uk` email during the sign up process to ensure your ticket is prioritised. You should also state that you are part of communitiesuk organisation in your request.
 
 [GitHub enterprise support agreement]: https://help.github.com/en/github/working-with-github-support/github-enterprise-cloud-support
 [support portal]: https://support.github.com/
@@ -92,5 +92,5 @@ You should use your `@digital.cabinet-office.gov.uk` email during the sign up pr
 * [Working with Git](working-with-git.html)
 
 [GitHub]: https://technology.blog.gov.uk/2016/05/31/how-we-use-git-at-the-government-digital-service/
-[alphagov]: https://github.com/alphagov/
+[communitiesuk]: https://github.com/communitiesuk/
 [govuk-one-login]: https://github.com/govuk-one-login
