Update email domain for communitiesuk membership
Co-authored-by: Keith Kennedy <keith@kennedy.dev>

--- a/source/standards/source-code/use-github.html.md.erb
+++ b/source/standards/source-code/use-github.html.md.erb
@@ -12,7 +12,7 @@ MHCLG uses the [communitiesuk] organisation on [GitHub] to collaborate on code. 
 
 You can use your personal GitHub account to access communitiesuk if you wish.
 
-All github user accounts added to `communitiesuk` *must* be [connected](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-personal-account-on-github/managing-email-preferences/adding-an-email-address-to-your-github-account) with a valid `digital.cabinet-office.gov.uk` email address. Accounts not connected to a valid email address will be removed from `communitiesuk`.
+All github user accounts added to `communitiesuk` *must* be [connected](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-personal-account-on-github/managing-email-preferences/adding-an-email-address-to-your-github-account) with a valid `communities.gov.uk` email address. Accounts not connected to a valid email address will be removed from `communitiesuk`.
 
 You must also set up two-factor authentication on your account.
 
