--- a/source/standards/secrets-auditing.html.md.erb
+++ b/source/standards/secrets-auditing.html.md.erb
@@ -33,7 +33,7 @@ You may wish to carry out secrets auditing if you want to:
 
 Your team should:
 
-- log any changes to your [access control list](/standards/secrets-acl.html) (ACL) and capture any deviations from your default, or expected access, ideally in Splunk. If you have documentation of secrets, you should make sure this is up to date as it can be used to underpin the audit process.
+- log any changes to your [access control list](/standards/secrets-acl.html) (ACL) and capture any deviations from your default, or expected access. If you have documentation of secrets, you should make sure this is up to date as it can be used to underpin the audit process.
 - automate the logging of secrets during the secrets life cycle, from generating secrets to rotating and destroying the secrets, if possible
 - create alerts for use cases of access which may indicate a security breach
   - this should include use of high risk secrets, such as break-glass accounts or root
