remove pyup and add renovate

--- a/source/standards/tracking-dependencies.html.md.erb
+++ b/source/standards/tracking-dependencies.html.md.erb
@@ -29,7 +29,7 @@ There are tools which scan GitHub repositories and raise pull requests (PRs) whe
 
     > Note: GOV.UK has implemented [RFC-167][] which allows automatic patching of all dependencies in certain cases.
 
-* [PyUp][] - a Python dependency checker. Used by GOV.UK Notify, PyUp will monitor for updates and vulnerabilities
+* [Renovate] - a Dependency checker. Used by Funding Service Team. Renovate supports additional package management formats not yet supported by Dependabot.
 
 All the above tools are free to use on public repositories.
 
@@ -98,3 +98,4 @@ Also consider managed solutions where possible. For example:
 [Paketo buildpacks]: https://paketo.io/
 [AWS Fargate]: https://aws.amazon.com/fargate/
 [RFC-167]: https://github.com/alphagov/govuk-rfcs/blob/main/rfc-167-auto-patch-dependencies.md
+[Renovate]: https://mend.io/renovate
