change cabinet office references to MHCLG

--- a/source/manuals/security-overview-for-websites.html.md.erb
+++ b/source/manuals/security-overview-for-websites.html.md.erb
@@ -225,7 +225,7 @@ See more information on the [Use a web application firewall (WAF)](/standards/we
 ## 12. AWS Shield Response Team
 ### Should Do
 
-If you use the Cabinet Office AWS environment:
+If you use the MHCLG AWS environment:
 
 Enable the AWS Shield Response Team (SRT), previously known as DDoS Response Team (DRT), against applicable resources like CloudFront and Application Load Balancers (ALBs) - see the [Amazon documentation on Shield Advanced and the SRT](https://docs.aws.amazon.com/waf/latest/developerguide/authorize-DRT.html).
 
@@ -238,7 +238,7 @@ You likely need to configure the following:
 
 ### Why?
 
-The Cabinet Office pays for an enhanced service (Shield Advanced), enabling AWS to support us when certain attacks impact our web services. This allows us to utilise AWS’ expertise and take some of the pressure off when there’s an incident. Without this, your website or service may be unavailable for longer while mitigating malicious activity.
+MHCLG pays for an enhanced service (Shield Advanced), enabling AWS to support us when certain attacks impact our web services. This allows us to utilise AWS’ expertise and take some of the pressure off when there’s an incident. Without this, your website or service may be unavailable for longer while mitigating malicious activity.
 
 ## 13. Vulnerability Scanning
 ### Should Do
