--- a/source/standards/accounts-with-third-parties.html.md.erb
+++ b/source/standards/accounts-with-third-parties.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: How to manage access to your third-party service accounts
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-03-04
 review_in: 6 months
 ---
 
@@ -26,13 +26,13 @@ When managing these credentials, you must:
 
 ### Managing accounts with organisation-level access
 
-Often third-party services natively support organisation or team level access, for example the use of [alphagov on GitHub](https://github.com/alphagov). In these cases you should make sure only the appropriate individuals on your team have access.
+Often third-party services natively support organisation or team level access, for example the use of [communitiesuk on GitHub](https://github.com/communitiesuk). In these cases you should make sure only the appropriate individuals on your team have access.
 
 With team or organisation-level accounts, where possible you should:
 
 * create separate accounts for each individual, rather than share credentials
-* use a single-sign-on provider rather than create an account with a separate username and password - preferably use G Suite as it’s a core part of the MHCLG leaver process, which means that access to linked third-party services will be revoked automatically when someone leaves
-* make sure that you have a documented process for removing individuals’s access when they leave MHCLG
+* use a single-sign-on provider rather than create an account with a separate username and password - if possible use Microsoft Entra ID as it’s a core part of the MHCLG leaver process, which means that access to linked third-party services will be revoked automatically when someone leaves
+* make sure that you have a documented process for removing individual's access when they leave MHCLG
 
 ### Managing accounts with individual-level access
 
@@ -45,22 +45,19 @@ Sharing individuals’ sign-on credentials can create risks as:
 
 To reduce these risks, you should:
 
-* create an account using a Google Group email address rather than an individual’s email address
-* set posting permissions to ‘public’ so your group can receive emails from outside MHCLG
-* set viewing topic permissions to ‘all members of the group’ so only users with access to a service are able to view posts
+* create an account using an MHCLG group email address or shared inbox, rather than an individual’s email address
+* set permissions so your group can receive emails from outside MHCLG
 * [store passwords in your team’s shared credential store](/standards/storing-credentials.html)
 * use two-factor authentication
-* make sure you have a documented process for removing an individual’s access to the Google Group,  credential store and for rotating credentials including any API keys
+* make sure you have a documented process for removing an individual’s access to the group/shared inbox, credential store and for rotating credentials including any API keys
 
 ## Managing GitHub accounts
 
-When you join MHCLG, you will need a GitHub account. You can either use your personal account or create a new account. Either way, please [add your @digital.cabinet-office.gov.uk email address to your GitHub account](https://github.com/settings/emails). You do not need to make it the primary address or public.
+To work in the communitiesuk GitHub organisation you will need a GitHub account. You can either use your personal account or create a new account.
+Either way, please [add your @communities.gov.uk email address to your GitHub account](https://github.com/settings/emails).
+You do not need to make it the primary address or public.
 
 Each MHCLG team should have someone (usually a technical lead) who is an owner and can grant/revoke access to their repositories.
-
-## Managing Logit accounts
-
-Use Google Apps Marketplace when you sign into Logit (this is the only available option).
 
 ## Managing Amazon Web Services (AWS) accounts
 
