Update accessibility statement
This still needs work, but have removed references to Cabinet Office/GDS as an incremental improvement for now.

--- a/source/accessibility.html.md.erb
+++ b/source/accessibility.html.md.erb
@@ -7,9 +7,10 @@ hide_in_navigation: true
 
 # Accessibility
 
-This accessibility statement applies to the MHCLG Way at <https://the-mhclg.digital.cabinet-office.gov.uk/>.
+This accessibility statement applies to the MHCLG Way at <https://friendly-parakeet-63jl6v6.pages.github.io/>.
 
-This website is run by the MHCLG Way team at the Government Digital Service (MHCLG). We want as many people as possible to be able to use this website. For example, that means you should be able to:
+This website is run by the MHCLG Way team at the Ministry of Housing, Communities & Local Government (MHCLG). We want
+as many people as possible to be able to use this website. For example, that means you should be able to:
 
 + change colours, contrast levels and fonts
 + zoom in up to 300% without problems
@@ -31,13 +32,13 @@ This website is fully compliant with the [Web Content Accessibility Guidelines v
 
 ### Feedback and contact information
 
-If you need information on this website in a different format like accessible PDF, large print, easy read, audio recording or braille, contact [the-mhclg-accessibility@digital.cabinet-office.gov.uk](mailto:the-mhclg-accessibility@digital.cabinet-office.gov.uk) with details of your request.
+If you need information on this website in a different format like accessible PDF, large print, easy read, audio recording or braille, contact [TODO_FIND_RIGHT_PERSON@communities.gov.uk](mailto:TODO_FIND_RIGHT_PERSON@communities.gov.uk) with details of your request.
 
 We’ll aim to reply within 3 working days.
 
 ### Reporting accessibility problems with this website
 
-We’re always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, email [the-mhclg-accessibility@digital.cabinet-office.gov.uk](mailto:the-mhclg-accessibility@digital.cabinet-office.gov.uk).
+We’re always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, email [TODO_FIND_RIGHT_PERSON@communities.gov.uk](mailto:TODO_FIND_RIGHT_PERSON@communities.gov.uk).
 
 ### Enforcement procedure
 
