Review pair programming page
Removed link to GOV.UK Pay guidance (we don't have access to it from MHCLG) and updated link to MHCLG Way.

Updated review date as I think this looks good for now.

--- a/source/standards/pair-programming.html.md.erb
+++ b/source/standards/pair-programming.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Pair Programming
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-03-04
 review_in: 6 months
 ---
 # <%= current_page.data.title %>
@@ -92,5 +92,4 @@ You should use your work email address in the `Co-authored-by` trailer.
 
 ## Further reading
 
-- Pairing and code review guidelines for [GOV.UK Pay](https://manual.payments.service.gov.uk/manual/development-processes/pairing-principles.html)
-- Code review guidelines in the [MHCLG Way](https://the-mhclg.digital.cabinet-office.gov.uk/standards/pull-requests.html#reviewing-a-request)
+- Code review guidelines in the [MHCLG Way](https://friendly-parakeet-63jl6v6.pages.github.io/standards/pull-requests.html#reviewing-a-request)
